src/objects/DMMAX__Insight__c/DMMAX__Insight__c.object-meta.xml
<CustomObject>
    <label>Max Insight</label>
    <nameField>
        <label>Insight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>