src/objects/DMMAX__Insight__c/fields/DMMAX__Click_Through_Value__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Click_Through_Value__c</fullName>
    <label>Click Through Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>