src/objects/DMMAX__Insight__c/fields/DMMAX__Respect_Parent_Context__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Respect_Parent_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Respect Parent Context</label>
    <type>Checkbox</type>
</CustomField>