src/objects/DMMAX__Insight__c/fields/DMMAX__Rule__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__Rule__c</fullName>
    <label>Rule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>