src/objects/DMMAX__Insight__c/fields/DMMAX__RuleDescription__c.field-meta.xml
<CustomField>
    <fullName>DMMAX__RuleDescription__c</fullName>
    <label>Rule Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>